syntax = "proto3";

package log.v1;

message ReadRequest {
  uint64 offset = 1;
}

message ReadResponse {
  bytes value = 1;
}

message WriteRequest {
  bytes value = 1;
}

message WriteResponse {
  uint64 offset = 1;
}

service Logger {
  rpc Read (ReadRequest) returns (ReadResponse);
  rpc Write (WriteRequest) returns (WriteResponse);
}
